# learn_cmake

./: README.md
codes/Demo1/: CMakeLists.txt  main.cpp
codes/Demo2/: CMakeLists.txt  main.cpp
codes/Demo3/: CMakeLists.txt  main.cpp
codes/Demo3/math/: my_power.h
codes/Demo4/: CMakeLists.txt
codes/Demo4/math/: CMakeLists.txt  my_power.cpp
codes/Demo5/: CMakeLists.txt  main.cpp
codes/Demo5/math/: CMakeLists.txt
codes/Demo6/: CMakeLists.txt
codes/Demo7/: CMakeLists.txt
codes/Demo8/: CMakeLists.txt  main.cpp
codes/Demo8/cmake/: Findmypower.cmake
codes/Demo8/export/: CMakeLists.txt
codes/Demo8/export/mymath/mypower/: mypower.h
codes/Demo8/import/: CMakeLists.txt
codes/Demo8/import/cmake/: FindMyMath.cmake
codes/Demo8/import/samples/myplus/: test_myplus.cpp
codes/Demo8/import/samples/mypower/: test_mypower.cpp
codes/Demo9/export/: CMakeLists.txt  Config.cmake.in
codes/Demo9/export/mymath/myplus/: myplus.cpp  myplus.h
codes/Demo9/export/mymath/mypower/: mypower.cpp
codes/Demo9/import/: CMakeLists.txt
